Fixed commens overflow and prism

--- a/resources/css/thread.scss
+++ b/resources/css/thread.scss
@@ -52,6 +52,16 @@
         }
 
         .message {
+            display: flex;
+            @extend .flex-column;
+            @extend .gap-3;
+            @extend .text-wrap;
+            @extend .text-break;
+
+            * {
+                margin-bottom: 0;
+            }
+
             img {
                 max-width: 100%;
                 max-height: 300px;
